# stcmkitpy

./: LICENSE  README.md  intersections.csv  pyproject.toml  pyproject.toml~  run-ascii2stcm.py  run_stcm.py  run_stcm_parallel.py  setup.py  visualizeTRKfiles.py
src/stcmkitpy/: __init__.py  anm2trk.py  batch_regressor.py  converter.py  crossovererrorcorrection.py  crosspointfinder.py  preprocessor.py  rawascii2stcmaori.py  trkdetrender.py  trkleveler.py
src/stcmkitpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stcmkitpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
