[project]
name = "stcmkitpy"
version = "0.1.0"
description = "Tools for STCM preprocessing and conversion using IGRF."
authors = [{ name="Hiroaki Koge", email="koge.h@aist.go.jp" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "geopy>=2.4.1",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "ppigrf>=2.1.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "xarray>=2025.3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
